# derive-overwrites

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: lib.rs
