[package]
name = "derive-overwrites"
description = "An attribute macro to create a trait from an impl block, to allow overwriting functions in a way that is compatible with using an external wrapper struct"
license-file = "LICENSE"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/hardliner66/derive-overwrites"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
